# tetra

./: .gitignore
cube_splitting/: 5_tetrahedron.ipynb  pseudo_atoms.ipynb  tetrahedrons_split.ipynb
marching_tetra_python/: march_show.py  marching_tetra.ipynb
marching_tetrahedron/: CMakeLists.txt
marching_tetrahedron/common/: CMakeLists.txt  global.h  struct.c  struct.h  triangles.c  triangles.h  utils.c  utils.h
marching_tetrahedron/cpu/: CMakeLists.txt
marching_tetrahedron/cpu/inc/: marching_tetrahedron.h  triangles.h
marching_tetrahedron/cpu/src/: marching_tetrahedron.c
marching_tetrahedron/gpu/: CMakeLists.txt
marching_tetrahedron/gpu/inc/: hello.cuh  hello.h  marching_tetrahedron_gpu.cuh  marching_tetrahedron_gpu.h  mt_noatom.cuh  mt_noatom.h  mt_tetra_based.cuh  mt_tetra_based.h  struct_gpu.cuh
marching_tetrahedron/gpu/src/: hello.cu  marching_tetrahedron_gpu.cu  marching_tetrahedron_optimized.cu  mt_noatom.cu  mt_tetra_based.cu  utils_gpu.cu
marching_tetrahedron/inc/: global.h  marching_tetrahedron.h  struct.h  triangles.h  utils.h
marching_tetrahedron/script/: stats_analyzer.ipynb  time_analyzer.ipynb  time_scraping.py
marching_tetrahedron/src/: marching_tetrahedron.c  struct.c  triangles.c  utils.c
marching_tetrahedron/test/: CMakeLists.txt  euler_characteristic.cpp  generator.c  main.c  normals.cpp
marching_tetrahedron/test_cpu/: CMakeLists.txt  euler_characteristic.cpp  generator.c  main.c  non_unique.c  normals.cpp
marching_tetrahedron/test_gpu/: CMakeLists.txt  test.c  test.cu  test_flags_noatom.cu  test_mixed.cu  test_optimized.cu  test_tetra_based.cu  test_wo_preprocessing.cu
prototype/: viewer_march.py
prototype/python/: functions_march.py  marching_tetra.ipynb  tetrahedron_determinant_studies.ipynb
